--- a/style.css
+++ b/style.css
@@ -1,15 +1,18 @@
 * {
-  font-family: 'Ubuntu', sans-serif;
-  /* background-color: gray;  */
+  /* font-family: 'Ubuntu', sans-serif; */
+  font-family: 'Quicksand', sans-serif; 
+  background-color:rgb(208,208,208); 
+  color: rgb(101,144,222)
 }
 
  #mainBox {
   height: 600px;
-  /* background-color: ;  */
+  background-color: rgb(101,144,222); 
 }
 
 .cardSize{
   height: 100%;
+  background-color: rgb(101,144,222);
 }
 
 .test {
@@ -17,20 +20,38 @@
 }
 
 .form {
-  color: white;
+  background-color: rgb(101,144,222);
+
 }
 
+.column {
+  float: left;
+  width: 50%;
+  padding: 10px;
+  background-color:rgb(208,208,208); 
 
-
-/* 
-#row1{
-  height: 40%;
 }
 
-#row2Margin{
-  height: 500px;
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
-.mainHeight{
-  height
-} */
+.left {
+  width: 40%;
+}
+
+.right {
+  width: 60%;
+}
+.size {
+  width: 60px;
+  height: 60px;
+}
+
+.brand-logo {
+  font-family: 'Ubuntu', sans-serif;
+}
+
