--- a/assets/style.css
+++ b/assets/style.css
@@ -5,6 +5,14 @@
   color: rgb(101,144,222)
 }
 
+nav {
+  height: 60px;
+}
+
+#navBar {
+  background-color:rgb(208,208,208); 
+}
+
  #mainBox {
   height: 600px;
   background-color: rgb(101,144,222); 
@@ -15,48 +23,41 @@
   background-color: rgb(101,144,222);
 }
 
-.test {
-  border: 2px solid black;
-}
-
-.form {
-  background-color: rgb(101,144,222);
-
-}
-
-.column {
-  float: left;
-  width: 50%;
-  padding: 10px;
-  background-color:rgb(208,208,208); 
-
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-.left {
-  width: 40%;
-}
-
-.right {
-  width: 60%;
-}
-.size {
-  width: 60px;
+#logo {
   height: 60px;
 }
 
-.brand-logo {
-  font-family: 'Ubuntu', sans-serif;
+#brand {
+  font-family: 'Quicksand', sans-serif;
+  font-style: italic;
 }
 
-.btn {
-  background-color: rgb(101,144,222);
+#status {
+  padding: 10px;
+}
+
+.allBtns {
+ background-color: rgb(101,144,222);
+}
+
+#city, #name {
+  width: 75%;
+}
+
+#nameLabel, #cityLabel, #moodLabel {
+  font-size: 20px;
+}
+
+#radioWrapper {
+  padding: 5px 0 5px 0;
+}
+
+#submitBtn {
+  margin: 10px 0 10px 0;
+}
+
+#weather {
+  
 }
 
 @media screen and (max-width:900px) {
@@ -65,7 +66,6 @@
     width: 100%;
     padding: 10px;
     background-color:rgb(208,208,208); 
-  
   }
 }
 
