--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,4 @@
 * {
-  /* font-family: 'Ubuntu', sans-serif; */
   font-family: 'Quicksand', sans-serif; 
   background-color:rgb(208,208,208); 
   color: rgb(101,144,222)
@@ -13,28 +12,15 @@ nav {
   background-color:rgb(208,208,208); 
 }
 
- #mainBox {
+#mainBox {
   height: 600px;
   background-color: rgb(101,144,222); 
- 
 }
-
-.heading{
-  font-size: xx-large;
-}
-
-#main {
-  padding: 40px;
-
-}
-/* .cards-container {
-  column-break-inside: avoid;
-} */
 
 .card {
-    display: inline-block;
-    overflow: visible;
-  }
+  display: inline-block;
+  overflow: visible;
+}
 
 .cardSize{
   height: 100%;
@@ -47,12 +33,12 @@ nav {
 
 .form {
   background-color: rgb(101,144,222);
- 
 }
 
 #playlist {
   padding: 30px;
 }
+
 #brand {
   font-family: 'Quicksand', sans-serif;
   font-style: italic;
@@ -62,15 +48,21 @@ nav {
 #weather {
   padding: 30px;
 }
+
 .card-content{
   font-weight: bold;
   font-style: italic;
+  background-color: rgb(101,144,222);
+  color: rgb(208,208,208);
 }
-#Lyrics {
-  font-size: large;
-  color:teal;
-  
 
+#aboutSensify {
+  background-color: rgb(101,144,222);
+  color: rgb(208,208,208);
+}
+
+.lyrics {
+  color:teal;
 }
 
 #status {
@@ -80,21 +72,11 @@ nav {
 .allBtns {
  background-color: rgb(101,144,222);
 }
-
-.left {
-  width: 30%;
-}
-
-.right {
-  width: 70%;
-}
-.size {
-  height: 60px;
-}
   
 #city, #name {
   width: 75%;
 }
+
 .card {
   border: 1px solid teal;
   box-shadow:1px 1px;
@@ -134,15 +116,30 @@ nav {
   background-color: rgb(101,144,222);
 }
 
-#weatherDesc {
+#footer, #footerLinks, #footerRow, #footerCopyright, #copyright {
+  font-family: 'Quicksand', sans-serif; 
+  background-color: rgb(101,144,222);
+  color: rgb(208,208,208);
+}
 
+.footerCol {
+  background-color: rgb(101,144,222);
+  color: rgb(208,208,208);
+}
+
+#codeIcon {
+  background-color: rgb(101,144,222);
+  color: rgb(208,208,208);
+}
+
+#githubLink {
+  background-color: rgb(101,144,222);
+  color: rgb(208,208,208);
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 20px;
 }
 
 @media screen and (max-width:900px) {
-  .column {
-    float: left;
-    width: 100%;
-    padding: 10px;
-    background-color:rgb(208,208,208); 
-  }
+
 }
