--- a/assets/style.css
+++ b/assets/style.css
@@ -35,18 +35,14 @@ nav {
   background-color: rgb(101,144,222);
 }
 
-#playlist {
-  padding: 30px;
+#playlist, #weather {
+  padding: 30px 50px 30px 50px;
 }
 
 #brand {
   font-family: 'Quicksand', sans-serif;
   font-style: italic;
   text-shadow: 2px 2px  rgb(101,144,222);
-}
-
-#weather {
-  padding: 30px;
 }
 
 .card-content{
@@ -145,5 +141,7 @@ nav {
 }
 
 @media screen and (max-width:900px) {
-
+  #playlist, #weather {
+    padding: 30px;
+  }
 }
