--- a/assets/style.css
+++ b/assets/style.css
@@ -110,15 +110,23 @@ nav {
 }
 
 #status {
-  padding: 10px;
+  padding: 20px;
 }
 
 .allBtns {
  background-color: rgb(101,144,222);
 }
+
+#submitWrapper {
+  padding: 10px;
+}
   
+#weather h3, #playlist h3 {
+  margin-top: 0;
+}
+
 #city, #name {
-  width: 75%;
+  width: 100%;
 }
 
 .card {
@@ -131,7 +139,7 @@ nav {
 }
 
 #radioWrapper {
-  padding: 5px 0 5px 0;
+  padding: 5px 60px 5px 60px;
 }
 
 #submitBtn {
@@ -190,6 +198,6 @@ nav {
 
 @media screen and (max-width:900px) {
   #playlist, #weather {
-    padding: 30px;
+    padding: 10px 30px 10px 30px;
   }
 }
