--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 * {
-  font-family: 'Quicksand', sans-serif; 
-  background-color:rgb(208,208,208); 
-  color: rgb(101,144,222)
+  font-family: 'Quicksand', sans-serif;
+  background-color: #EAE7DC;
+  color: rgb(101, 144, 222)
 }
 
 nav {
@@ -9,12 +9,12 @@ nav {
 }
 
 #navBar {
-  background-color:rgb(208,208,208); 
+  background-color: rgb(208, 208, 208);
 }
 
 #mainBox {
   height: 600px;
-  background-color: rgb(101,144,222); 
+  background-color: rgb(101, 144, 222);
 }
 
 .card {
@@ -22,9 +22,9 @@ nav {
   overflow: visible;
 }
 
-.cardSize{
+.cardSize {
   height: 100%;
-  background-color: rgb(101,144,222);
+  background-color: rgb(101, 144, 222);
 }
 
 #logo {
@@ -32,7 +32,7 @@ nav {
 }
 
 .form {
-  background-color: rgb(101,144,222);
+  background-color: rgb(101, 144, 222);
 }
 
 #playlist, #weather {
@@ -42,23 +42,23 @@ nav {
 #brand {
   font-family: 'Quicksand', sans-serif;
   font-style: italic;
-  text-shadow: 2px 2px  rgb(101,144,222);
+  text-shadow: 2px 2px rgb(101, 144, 222);
 }
 
-.card-content{
+.card-content {
   font-weight: bold;
   font-style: italic;
-  background-color: rgb(101,144,222);
-  color: rgb(208,208,208);
+  background-color: rgb(101, 144, 222);
+  color: rgb(208, 208, 208);
 }
 
 #aboutSensify {
-  background-color: rgb(101,144,222);
-  color: rgb(208,208,208);
+  background-color: rgb(101, 144, 222);
+  color: rgb(208, 208, 208);
 }
 
 .lyrics {
-  color:teal;
+  color: teal;
 }
 
 #status {
@@ -66,16 +66,16 @@ nav {
 }
 
 .allBtns {
- background-color: rgb(101,144,222);
+  background-color: rgb(101, 144, 222);
 }
-  
+
 #city, #name {
   width: 75%;
 }
 
 .card {
   border: 1px solid teal;
-  box-shadow:1px 1px;
+  box-shadow: 1px 1px;
 }
 
 #nameLabel, #cityLabel, #moodLabel {
@@ -91,7 +91,7 @@ nav {
 }
 
 .findbtn {
-  background-color: rgb(101,144,222) !important;
+  background-color: rgb(101, 144, 222) !important;
 }
 
 #currentCity {
@@ -99,42 +99,42 @@ nav {
 }
 
 #forecast {
-  background-color: rgb(101,144,222);
+  background-color: rgb(101, 144, 222);
 }
 
 #cardElem {
-  background-color: rgb(101,144,222);
+  background-color: rgb(101, 144, 222);
 }
 
 #weatherIcons {
   font-size: 100px;
-  color: rgb(208,208,208);
-  background-color: rgb(101,144,222);
+  color: rgb(208, 208, 208);
+  background-color: rgb(101, 144, 222);
 }
 
 #weatherDesc {
-  background-color: rgb(208,208,208);
+  background-color: rgb(208, 208, 208);
 }
 
 #footer, #footerLinks, #footerRow, #footerCopyright, #copyright {
-  font-family: 'Quicksand', sans-serif; 
-  background-color: rgb(101,144,222);
-  color: rgb(208,208,208);
+  font-family: 'Quicksand', sans-serif;
+  background-color: rgb(101, 144, 222);
+  color: rgb(208, 208, 208);
 }
 
 .footerCol {
-  background-color: rgb(101,144,222);
-  color: rgb(208,208,208);
+  background-color: rgb(101, 144, 222);
+  color: rgb(208, 208, 208);
 }
 
 #codeIcon {
-  background-color: rgb(101,144,222);
-  color: rgb(208,208,208);
+  background-color: rgb(101, 144, 222);
+  color: rgb(208, 208, 208);
 }
 
 #githubLink {
-  background-color: rgb(101,144,222);
-  color: rgb(208,208,208);
+  background-color: rgb(101, 144, 222);
+  color: rgb(208, 208, 208);
   text-decoration: none;
   cursor: pointer;
   font-size: 20px;
@@ -144,4 +144,14 @@ nav {
   #playlist, #weather {
     padding: 30px;
   }
+  .rightText{
+    font-size: large;
+    margin-top: 0px;
+  }
+}
+
+.rightText {
+  padding-bottom: 15px;
+  border-bottom: 2px solid;
+  border-color: rgba(101, 144, 222, 0.7);
 }
