--- a/assets/style.css
+++ b/assets/style.css
@@ -201,3 +201,11 @@ nav {
     padding: 10px 30px 10px 30px;
   }
 }
+
+#us  {
+    border-radius: 25px;
+    border: 2px solid;
+    padding: 20px;
+    /* width: 200px;
+    height: 150px; */
+  }
