--- a/assets/style.css
+++ b/assets/style.css
@@ -10,6 +10,24 @@ input:not([type]):focus:not([readonly]), input[type=text]:not(.browser-default):
   background-color: rgb(70, 120, 212);
 }
 
+@media screen and (min-width:601px) {
+  #footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 90px;
+  }
+  #pageWrapper {
+    margin-bottom: 90px;
+  }
+}
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+
 * {
   font-family: 'Quicksand', sans-serif;
   background-color: #EAE7DC;
