--- a/assets/style.css
+++ b/assets/style.css
@@ -271,13 +271,13 @@ html {
   text-align: center;
 }
 
-#us{
-    border-radius: 25px;
-    border: 2px solid;
-    padding: 20px;
-    /* width: 200px;
+#us {
+  border-radius: 25px;
+  border: 2px solid;
+  padding: 20px;
+  /* width: 200px;
     height: 150px; */
-  }
+}
 
 .rightText {
   padding-bottom: 15px;
@@ -305,4 +305,9 @@ html {
   #pageWrapper {
     margin-bottom: 90px;
   }
+}
+
+.bioText {
+  background-color: rgb(101, 144, 222);
+  color: rgb(208, 208, 208);
 }
